--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Place your CSS styles in this file */
+/*CSS styles for PRiley website*/
 
 h1 {
     text-align: center;
@@ -11,6 +11,13 @@ h2{
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
 }
+
+h3{
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold; 
+}
+
 body{
     background-color: rgb(224, 247, 247);
 }
@@ -19,4 +26,8 @@ p{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
+}
+
+footer{
+    text-align: center;
 }
